# MarchingCubesAlg

./: .gitignore  MarchingCubesAlg.uproject  New Text Document.mhd  README.md  bernard3D_Q.vtk  rendering_config.txt
Assign3/: assign3_qtpyvtk_skeleton.py  rendering_config.txt
Assign3/src/: CMakeLists.txt  MarchingCubes.cxx
Binaries/Win64/: MarchingCubesAlg.exp  MarchingCubesAlg.lib  MarchingCubesAlg.target  MarchingCubesAlgEditor.target  VTKTestEditor.target
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: 128spiderFull.uasset  128spidersquare.uasset  DT_style.uasset  ImportVTKFile.uasset  M_VolumeRayMarch_Lit_LinearSteps_Preview.uasset  M_VolumeRayMarch_Lit_LinearSteps_Preview_2.uasset  MarchingCubesBP.uasset  MyMarchingCubes.uasset  RayMarchMaterial.uasset  Red.uasset  Roboto-Black.uasset  Roboto.uasset  T_Volume_Wisp_01.uasset  UMG_Slider.uasset  UMG_TextInput.uasset  VertexMat.uasset  appendedImages.uasset  circleStack.uasset
Content/StarterContent/: hyBarsvl.uasset
Content/StarterContent/Architecture/: Floor_400x400.uasset
Content/StarterContent/Maps/: Minimal_Default.umap
Content/VTKSlices/: myslice.uasset
Plugins/UEShaderBits-GDC-Pack-master/Content/PaintingVolumeTextures/Maps/: VR_Volume_Paint.umap
Plugins/UEShaderBits-GDC-Pack-master/Content/PaintingVolumeTextures/Materials/: M_VolumeRayMarch_Lit_LinearSteps.uasset  M_VolumeRayMarch_Lit_LinearSteps_Preview_NoCurl.uasset
Source/: MarchingCubesAlg.Target.cs  MarchingCubesAlgEditor.Target.cs
Source/MarchingCubesAlg/: DataSetReader.cpp  DataSetReader.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesAlg.Build.cs  MarchingCubesAlg.cpp  MarchingCubesAlgGameModeBase.cpp  MarchingCubesAlgGameModeBase.h  MarchingCubesPawn.cpp  MarchingCubesPawn.h  MarchingCubesPawnAlgorithm.cpp  MarchingCubesPawnAlgorithm.h  MyBlueprintFunctionLibrary.cpp  MyBlueprintFunctionLibrary.h  MyCustomAsset.h  MyCustomAssetFactory.cpp  MyCustomAssetFactory.h  SphereSourceTest.cpp  SphereSourceTest.h  TextAsset.h  TextAssetFactory.cpp  TextAssetFactory.h  TextAssetFactoryNew.cpp  TextAssetFactoryNew.h  VTKFileImporter_funclib.cpp  VTKFileImporter_funclib.h
Source/MarchingCubesAlg/include/: vtkCellArray.h  vtkConfigure.h
Source/MarchingCubesAlg/lib/: vtkChartsCore-9.0.lib  vtkChartsCore-9.0d.lib  vtkCommonColor-9.0.lib  vtkCommonColor-9.0d.lib  vtkCommonComputationalGeometry-9.0.lib  vtkCommonCore-9.0.lib  vtkCommonCore-9.0d.lib  vtkCommonDataModel-9.0.lib  vtkCommonDataModel-9.0d.lib  vtkCommonExecutionModel-9.0.lib  vtkCommonExecutionModel-9.0d.lib  vtkCommonMath-9.0.lib  vtkCommonMath-9.0d.lib  vtkCommonMisc-9.0.lib  vtkCommonMisc-9.0d.lib  vtkCommonSystem-9.0.lib  vtkCommonSystem-9.0d.lib  vtkCommonTransforms-9.0.lib  vtkCommonTransforms-9.0d.lib  vtkDICOMParser-9.0.lib  vtkDICOMParser-9.0d.lib  vtkDomainsChemistry-9.0.lib  vtkDomainsChemistry-9.0d.lib  vtkDomainsChemistryOpenGL2-9.0.lib  vtkFiltersAMR-9.0.lib  vtkFiltersAMR-9.0d.lib  vtkFiltersCore-9.0.lib  vtkFiltersExtraction-9.0.lib  vtkFiltersExtraction-9.0d.lib  vtkFiltersFlowPaths-9.0.lib  vtkFiltersFlowPaths-9.0d.lib  vtkFiltersGeneral-9.0.lib  vtkFiltersGeneric-9.0.lib  vtkFiltersGeneric-9.0d.lib  vtkFiltersGeometry-9.0.lib  vtkFiltersGeometry-9.0d.lib  vtkFiltersHybrid-9.0.lib  vtkFiltersHybrid-9.0d.lib  vtkFiltersHyperTree-9.0.lib  vtkFiltersHyperTree-9.0d.lib  (+214 more)
Source/MarchingCubesAlg/lib/exp/: vtkCommonColor-9.0d.exp  vtkCommonComputationalGeometry-9.0d.exp  vtkCommonCore-9.0d.exp  vtkCommonDataModel-9.0d.exp  vtkCommonExecutionModel-9.0d.exp  vtkCommonMath-9.0d.exp  vtkCommonMisc-9.0d.exp  vtkCommonSystem-9.0d.exp  vtkCommonTransforms-9.0d.exp  vtkFiltersCore-9.0d.exp  vtkFiltersGeneral-9.0d.exp  vtkFiltersGeometry-9.0d.exp  vtkFiltersSources-9.0d.exp  vtkRenderingCore-9.0d.exp  vtkloguru-9.0d.exp  vtksys-9.0d.exp
TestData/: .gitmodules  CMakeLists.txt  FindANN.cmake  FindGLUT.cmake  TextureTest_Old_Long.cu  TextureTest_Simple.cu  fiber.h  glnetwork.h  network.h
TestData/TestData/: mainSeeds.txt  mainSeeds_128.txt
(+6 files in other folders)
